[package]
name = "sloppy"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Bryant Luk <code@bryantluk.com>"]
edition = "2021"
description = "A sloppy distributed hash table library"
repository = "https://github.com/bluk/sloppy"
readme = "README.md"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
rust-version = "1.70.0"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

bt_bencode = { version = "0.7", default-features = false }
cloudburst = { git = "https://github.com/bluk/cloudburst", branch = "next" }

serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
serde_derive = { version = "1", default-features = false }
serde_bytes = "0.11"

rand = "0.8"

tracing = "0.1"
tracing-subscriber = "0.3"

clap = "4.1"

tokio = { version = "1.33.0", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }

axum = "0.6"

[dev-dependencies]
hex-literal = "0.4.1"