[package]
authors = ["Bryant Luk <code@bryantluk.com>"]
description = "A distributed hash table node"
edition = "2021"
include = [
  "src/**/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE-APACHE",
  "LICENSE-MIT",
]
license = "MIT OR Apache-2.0"
name = "waynode"
readme = "README.md"
repository = "https://github.com/bluk/waynode"
rust-version = "1.74.0"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
axum = "0.7"
bt_bencode = "0.8"
clap = { version = "4.5.2", features = ["derive", "env"] }
cloudburst = { version = "0.0.5" }
hyper = "1.0.1"
hyper-util = { version = "0.1.1", features = ["tokio", "server-auto", "http1", "http2"] }
rand = "0.8"
serde = { version = "1", default-features = false }
serde_bytes = "0.11"
serde_derive = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false }
thiserror = "1.0"
tokio = { version = "1.25.0", features = ["macros", "net", "rt", "rt-multi-thread", "signal"] }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.5.0", features = ["timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
hex-literal = "0.4.1"

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.7.0"
tracing-journald = "0.3.0"
